--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.2.0",
+    "@react-native-firebase/auth": "^18.2.0",
+    "@react-native-firebase/database": "^18.2.0",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
+    "expo-auth-session": "^5.0.2",
     "expo-constants": "~14.2.1",
     "expo-font": "^11.1.1",
     "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
+    "expo-modules-autolinking": "^1.5.0",
+    "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
